# nobsrom

./: README.md  config.yaml  favorites.yaml  pyproject.toml  requirements.txt
docs/: index.html  search.js
docs/nobsrom/: main.html
src/nobsrom/: main.py
